# todo_api

./: .env  Cargo.toml  tmux.session
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  AuthContext.tsx  LoginScreen.tsx  TodoList.tsx  api.ts  index.css
julia_module/: Manifest.toml  scorer.jl
src/: auth.rs  db.rs  error.rs  main.rs  middleware.rs  routes.rs
