[package]
name = "todo_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
hyper = { version = "1.7.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"]}
thiserror = "1.0"